# drip

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
drip/: builder.cpp  builder.hpp  fetcher.cpp  fetcher.hpp  main.cpp  manifest.cpp  manifest.hpp  package.cpp  package.hpp  resolver.cpp  resolver.hpp  version.cpp  version.hpp
drip/cli/: main.cpp
drip/cli/cmd/: add.cpp  build.cpp  build.hpp  fetch.cpp  help.cpp  init.cpp  install.cpp  install.hpp  lock.cpp  resolve.cpp  run.cpp
drip/cmd/: add.cpp  build.cpp  fetch.cpp  help.cpp  init.cpp  install.cpp  lock.cpp  lock.hpp  resolve.cpp  run.cpp
drip/core/: builder.cpp  builder.hpp  builder.test.cpp  fetcher.cpp  fetcher.hpp  fetcher.test.cpp  manifest.cpp  manifest.hpp  manifest.test.cpp  package.cpp  package.hpp  package.test.cpp  resolver.cpp  resolver.hpp  resolver.test.cpp  result.hpp  result.test.cpp  version.cpp  version.test.cpp
drip/details/: cmake_utils.cpp  cmake_utils.hpp  cmake_utils.test.cpp  git_utils.cpp  git_utils.hpp  git_utils.test.cpp
include/drip/: builder.hpp  constants.hpp  fetcher.hpp  manifest.hpp  package.hpp  resolver.hpp
include/drip/cmd/: add.hpp  fetch.hpp  help.hpp  init.hpp  resolve.hpp  run.hpp
include/drip/utils/: cmake_utils.hpp  git_utils.hpp
src/: builder.cpp  fetcher.cpp  main.cpp  manifest.cpp  package.cpp  resolver.cpp  version.cpp
src/cmd/: add.cpp  build.cpp  fetch.cpp  help.cpp  init.cpp  install.cpp  lock.cpp  resolve.cpp  run.cpp
src/utils/: cmake_utils.cpp  git_utils.cpp
